[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/common/VBoxSoundSettings.gd" type="Script" id=1]

[node name="VBoxSoundSettings" type="VBoxContainer"]
margin_top = 14.0
margin_right = 178.0
margin_bottom = 126.0
script = ExtResource( 1 )

[node name="Label1" type="Label" parent="."]
margin_right = 246.0
margin_bottom = 27.0
text = "SFX Volume"
align = 1

[node name="HSliderSFX" type="HSlider" parent="."]
unique_name_in_owner = true
margin_top = 31.0
margin_right = 246.0
margin_bottom = 47.0
max_value = 1.0
step = 0.1
value = 0.5

[node name="Label2" type="Label" parent="."]
margin_top = 51.0
margin_right = 246.0
margin_bottom = 78.0
text = "Music Volume"
align = 1

[node name="HSliderMusic" type="HSlider" parent="."]
unique_name_in_owner = true
margin_top = 82.0
margin_right = 246.0
margin_bottom = 98.0
max_value = 1.0
step = 0.1
value = 0.5

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 102.0
margin_right = 246.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="."]
margin_top = 110.0
margin_right = 246.0
margin_bottom = 137.0
text = "Player name"
align = 1

[node name="LineEdit" type="LineEdit" parent="."]
margin_top = 141.0
margin_right = 246.0
margin_bottom = 178.0
text = "Anonymous"
max_length = 20
clear_button_enabled = true

[node name="DisableViewports" type="CheckBox" parent="."]
unique_name_in_owner = true
margin_top = 182.0
margin_right = 246.0
margin_bottom = 273.0
text = "Disable background drawing
(check this if you see a black
screen on mobile devices)"

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 277.0
margin_right = 246.0
margin_bottom = 281.0

[node name="ResetCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
margin_top = 285.0
margin_right = 246.0
margin_bottom = 376.0
text = "I want to delete all my 
game progress and restart
from a new landscape"

[node name="ResetButton" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 380.0
margin_right = 246.0
margin_bottom = 417.0
text = "Reset game progress"

[node name="HSeparator3" type="HSeparator" parent="."]
margin_top = 421.0
margin_right = 246.0
margin_bottom = 425.0
